# cpr-tests

./: helper  main.cpp
CPP-udacity/header-how-to/: factorial.cpp  factorial.h  main.cpp
CPP-udacity/inheritance-interview-test/: main.cpp  main.hpp
CPP-udacity/lesson-10-part-9/: main.cpp  main.hpp
CPP-udacity/lesson-13-part-11/: main.cpp  main.hpp
CPP-udacity/lesson-8-part-24/: CMakeLists.txt  input.txt  main.cpp  mainClasses.cpp  mainFunctions.cpp
CPP-udacity/lesson-8-part-24/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main
CPP-udacity/lesson-8-part-3/: input.txt  main  main.cpp  main.hpp
include/libs/cpr/: payload.h
include/libs/cpr/cpr/: payload.cpp
notes/: template-classes.note
src/: CC.h  CMakeLists.txt  CollectSystemData.h  Helper.cpp  NetworkOperations.h  PRNG.h  Pawn.h  cc.cpp  cc.h  collectSystemData.cpp  main.cpp  networkOperations.cpp  pawn.cpp  plan.txt
src/shared/: Helper.h  PRNG.cpp  PRNG.h
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main
